--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongoose" : ">=2.5.13",
     "validator" : ">=0.3.7",
     "ejs" : ">=0.5.0",
-    "eventproxy" : ">=0.1.0"
+    "eventproxy" : ">=0.1.0",
+    "mongoskin" : ">=0.3.6"
   }
 }
